--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.5.2",
     "gulp-electron": "0.0.5",
+    "gulp-install": "^0.4.0",
     "gulp-jshint": "^1.11.0",
-    "gulp-less": "^3.0.3"
+    "gulp-less": "^3.0.3",
+    "gulp-run-electron": "^1.1.1"
   },
   "dependencies": {
     "coverart": "0.0.1",
