--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "coverart": "0.0.1",
     "font-awesome": "^4.3.0",
     "jquery": "^2.1.4",
-    "mpd": "^1.3.0"
+    "mpd": "^1.3.0",
+    "rivets": "^0.8.1"
   }
 }
