--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gulp-run-electron": "^1.1.1"
   },
   "dependencies": {
-    "coverart": "0.0.1",
+    "album-cover": "0.0.3",
     "font-awesome": "^4.3.0",
     "jquery": "^2.1.4",
     "mpd": "^1.3.0",
