--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "flex": "^0.2.0",
     "font-awesome": "^4.3.0",
     "jquery": "^2.1.4",
+    "keymirror": "^0.1.1",
     "mpd": "^1.3.0",
     "object-assign": "^3.0.0",
     "react": "^0.13.3",
