--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "dependencies": {
     "album-cover": "0.0.3",
     "font-awesome": "^4.3.0",
+    "jquery": "^2.1.4",
     "keymirror": "^0.1.1",
     "mpd": "^1.3.0",
+    "nconf": "^0.7.1",
     "object-assign": "^3.0.0",
     "react": "^0.13.3"
   }
