--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "author": "Arnar Gauti Ingason <granra@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^1.6.0-dev.20150730",
     "electron-prebuilt": "^0.30.0",
     "gulp": "^3.9.0",
     "gulp-electron": "0.0.5",
@@ -23,17 +22,16 @@
     "gulp-react": "^3.0.1",
     "gulp-run-electron": "^1.1.1",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-typescript": "^2.8.0"
+    "gulp-typescript": "^2.8.0",
+    "typescript": "^1.6.0-dev.20150730"
   },
   "dependencies": {
     "alt": "^0.17.1",
     "font-awesome": "^4.3.0",
     "jquery": "^2.1.4",
-    "keymirror": "^0.1.1",
     "mpd": "^1.3.0",
     "music-cover": "^0.1.0",
     "nconf": "^0.7.1",
-    "object-assign": "^3.0.0",
     "react": "^0.13.3"
   }
 }
