Added actions and store for settings

--- a/src/player/scripts/tsconfig.json
+++ b/src/player/scripts/tsconfig.json
@@ -15,14 +15,17 @@
         "actions/AbstractActions.ts",
         "actions/CoverActions.ts",
         "actions/MpdActions.ts",
+        "actions/SettingsActions.ts",
         "alt.ts",
         "stores/AbstractStoreModel.ts",
         "stores/CoverStore.ts",
         "stores/MpdStore.ts",
+        "stores/SettingsStore.ts",
         "typings/interfaces.d.ts",
         "typings/music-cover.d.ts",
         "typings/player.d.ts",
         "utils/MpdUtils.ts",
+        "utils/SettingsUtils.ts",
         "components/Controls.tsx",
         "components/Cover.tsx",
         "components/Menu.tsx",
